# g1_visual_grasp

./: README.md
src/custom_msg_srv/: CMakeLists.txt  package.xml
src/custom_msg_srv/src/: pub.cpp  sub.cpp
src/custom_msg_srv/srv/: GetBestPose.srv
src/g1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/g1_moveit_config/config/: g1_29dof_with_hand.ros2_control.xacro  g1_29dof_with_hand.srdf  g1_29dof_with_hand.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/g1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/g1_moveit_config/rviz/: rviz_.rviz
src/g1_moveit_config/urdf/: g1_29dof_with_hand.urdf
src/giim_seg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/giim_seg/giim_seg/: giim_seg_node_service.py  pcl_best_target_Plane_Pose.py  srv_client.py
src/humanoid_grasp/: CMakeLists.txt  package.xml
src/humanoid_grasp/action/: ArmMove.action  VisualGrasp.action
src/humanoid_grasp/launch/: arm_move_action.launch.py  cartesian_control.launch.py  double_arms_control.launch.py
src/humanoid_grasp/scripts/: scan.py
src/humanoid_grasp/src/: arm_pose.cpp  cartesian_control.cpp  click_and_move.cpp  double_arm_grab_demo.cpp  double_arms_control.cpp  g1_dex3_example.cpp  g1_pose_arm.cpp  moveit_controller.cpp  single_arm_demo.cpp
src/humanoid_grasp/src/action_server/: action_client.cpp  action_server.cpp
src/unitree_ros2/: setup.sh  setup_default.sh
